--- a/src/app/candidat/c-footer/c-footer.component.html
+++ b/src/app/candidat/c-footer/c-footer.component.html
@@ -6,9 +6,11 @@
         <div class="col-xl-3 col-lg-4 col-md-6">
           <div class="footer-widget wow fadeInUp" data-wow-delay=".2s">
             <div class="logo">
-              <a href="#0"> <img src="assets/img/LogoUcacIcamSansEcritsjpgfooter.jpg" width="180" height="49" alt=""> </a>
+              <a href="#0"> <img src="assets/img/LogoUcacIcamSansEcritsjpgfooter.jpg" width="180" height="49" alt="">
+              </a>
             </div>
-            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis nulla placerat amet amet congue.</p>
+            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis nulla placerat amet amet
+              congue.</p>
             <ul class="socials">
               <li> <a href="#0"> <i class="lni lni-facebook-filled"></i> </a> </li>
               <li> <a href="#0"> <i class="lni lni-twitter-filled"></i> </a> </li>
@@ -32,7 +34,6 @@
       </div>
     </div>
     <div class="copyright-wrapper wow fadeInUp" data-wow-delay=".2s">
-      <p>Design and Developed by <a href="https://uideck.com" rel="nofollow" target="_blank">UIdeck</a> Built-with <a href="#">Lindy UI Kit</a></p>
     </div>
   </div>
 </footer>
