--- a/src/app/authentication/login/login.component.css
+++ b/src/app/authentication/login/login.component.css
@@ -14,13 +14,19 @@ margin: auto;
         
 }
 
+@media screen and (max-width: 992px) {
+    .card > .illustration > img {
+        display: none;
+    }
+}
+
 #contact .container .row .card{
     border-radius: 10px;
     padding: 0;
     display: grid;
     width: 65%;
     gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .card > .illustration > img {
