--- a/src/app/public/register/register.component.css
+++ b/src/app/public/register/register.component.css
@@ -17,7 +17,14 @@ margin: auto;
     display: grid;
     width: 65%;
     gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+
+@media screen and (max-width: 992px) {
+    .card > .illustration > img {
+        display: none;
+    }
 }
 
 .card > .illustration > img {
