--- a/src/app/public/register/register.component.html
+++ b/src/app/public/register/register.component.html
@@ -111,7 +111,7 @@
               </div>
 
               <div>&nbsp;</div>
-              <a href="login.html">Vous avez déjà un compte? Connectez-vous</a>
+              <a routerLink="/auth">Vous avez déjà un compte? Connectez-vous</a>
             </div>
           </form>
         </div>
