Update Regle de validation de paiement

--- a/src/app/candidat/c-header/c-header.component.html
+++ b/src/app/candidat/c-header/c-header.component.html
@@ -31,7 +31,7 @@
                   </li>
                 </ul>
                 <a (click)="logout()" class="button button-sm radius-10 d-none d-lg-flex"><img src="assets/img/person.svg"> {{candidat.name + ' '+candidat.prenom
-                  }} </a>
+                  }} -- Se Déconnecter </a>
               </div>
               <!-- navbar collapse -->
             </nav>
