--- a/src/app/candidat/inscription-form1/inscription-form1.component.html
+++ b/src/app/candidat/inscription-form1/inscription-form1.component.html
@@ -282,7 +282,7 @@
                   </label>
 
                   <div *ngIf="codeExists" style="color: red; font-weight: bolder">Le code {{
-                    candidatureForm.reference_paiement }} n'est pas valide !!! Il a déjà été utilisé ou est incorrest !
+                    candidatureForm.reference_paiement }} n'est pas valide !!! Il a déjà été utilisé ou est incorrect !
                     Veillez réessayez</div>
                   <div *ngIf="codeValid" style="color: green; font-weight: bolder">Le code {{
                     candidatureForm.reference_paiement }} est valide </div>
