--- a/src/app/candidat/resultat/resultat.component.html
+++ b/src/app/candidat/resultat/resultat.component.html
@@ -12,7 +12,7 @@
           <div class="hero-content-wrapper">
 
             <h4 class="wow fadeInUp" data-wow-delay=".2s">Le statut de votre candidature</h4>
-            <h5 class="wow fadeInUp" data-wow-delay=".2s">En_Cours</h5>
+            <h5 class="wow fadeInUp" data-wow-delay=".2s"> {{candidatureStatut.statut}}  </h5>
 
           </div>
         </div>
